--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     This extension directly links a professor's ratemyprofessors.com page in McGill course websites.
