Minor popup changes

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,10 @@
   <head>
     <link rel="stylesheet" href="index.css">
   </head>
-  <body>
-    This extension directly links a professor's ratemyprofessors.com page in McGill course websites.
+  <body id = 'popup-body'>
+    <div id = 'popup-container'>
+      <p id = 'popup-text'>This extension will link the name of your Professor directly to their RateMyProfessor page!</p>
+
+    </div>
   </body>
 </html>
